--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">ARMHRdep</string>
+    <string name="app_name">ARMHR</string>
+    <string name="login_button">Войти</string>
+    <string name="register_button">Зарегестрироваться</string>
+    <string name="hello_message">Добро пожаловать!</string>
+
 </resources>
